fix pro plan not showing due to opacity property

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -79,12 +79,6 @@ input, textarea {
 }
 .hidden {
     display: none !important;
-    opacity: 0;
-    -webkit-transition: all 200ms ease-in-out;
-    -moz-transition: all 200ms ease-in-out;
-    -o-transition: all 200ms ease-in-out;
-    -ms-transition: all 200ms ease-in-out;
-    transition: all 200ms ease-in-out;
 }
 a, a:link, a:visited, a:hover, a:active {
     outline: none;
